syntax = "proto3";

package wallet;

service WalletService {
  rpc DeductBalance(DeductBalanceRequest) returns (DeductBalanceResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc AddBalance(AddBalanceRequest) returns (AddBalanceResponse);
}

message DeductBalanceRequest {
  string userId = 1;
  double amount = 2;
  string transactionId = 3;
}

message DeductBalanceResponse {
  bool success = 1;
  string message = 2;
  string transactionId = 3;
  double newBalance = 4;
}

message GetBalanceRequest {
  string userId = 1;
}

message GetBalanceResponse {
  bool success = 1;
  double balance = 2;
  string message = 3;
}

message AddBalanceRequest {
  string userId = 1;
  double amount = 2;
  string transactionId = 3;
}

message AddBalanceResponse {
  bool success = 1;
  string message = 2;
  string transactionId = 3;
  double newBalance = 4;
}
